<resources>
    <string name="app_name">NikeFC</string>
    <string name="title_home">NikeFC</string>
    <string name="title_shop">Shop</string>
    <string name="title_events">Events</string>
    <string name="title_training">Training</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>