<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nike.nikefc.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.nike.nikefc.ui.events.fragment.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.nike.nikefc.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.nike.nikefc.ui.training.TrainingFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_profiles"
        android:name="com.nike.nikefc.ui.profile.fragment.ProfileFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_shop" />
</navigation>